--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -161,6 +161,12 @@ The subsequent discussion concentrates on research efforts investigating diverse
 
 </td><td>
 
+零样本文本转语音方法通常基于它们的输出机制, 分为自回归和非自回归两类范式.
+- 自回归系统通常依赖于语言模型架构 (**VALL-E**[^wang2023valle], **SPEAR-TTS**[^kharitonov2023speak], **IST-LM**[^yang2024interleaved]);
+- 非自回归实现通常采用扩散模型和类似方法 (**NaturalSpeech3**[^junaturalspeech], **F5-TTS**[^chen2024f5]).
+
+后续讨论集中在自回归语言建模架构框架下研究多样性表示的研究工作.
+
 </td></tr>
 <tr><td>
 
@@ -173,6 +179,20 @@ Recent studies further enhance **VALL-E**’s capabilities across multilingual g
 In contrast to the unified language modeling approach of **VALL-E** and its variants, **CosyVoice**[^du2024cosyvoice] leverages an LLM for text-to-token conversion followed by a conditional flow-matching model for token-to-spectrogram synthesis, enhancing zero-shot voice cloning through end-to-end supervised speech token learning.
 
 </td><td>
+
+**基于离散值 Token 的 TTS**
+
+基于离散表示的 TTS 系统使用从无监督或半监督学习框架导出的 Tokenized 声学单元.
+这些离散 Token 作为语音的紧凑且有效表示, 捕获语音和韵律属性, 同时减少数据存储和计算的冗余.
+
+**VALL-E**[^wang2023valle] 是用于文本转语音合成的神经编解码语言模型, 首先将 TTS 重定义为条件化语言建模任务, 使用仅三秒声学提示实现高质量个性化语音合成, 显著提升自然度和说话人相似性.
+
+近期的研究进一步增强了 **VALL-E** 的能力, 共同推动了零样本语音合成的可扩展性, 质量, 和语言灵活性.
+- 多语言泛化 (**VALL-E X**[^zhang2023vallex]),
+- 解码效率 (**VALL-E 2**[^chen2024valle2]),
+- 健壮性 (**ELLA-V**[^song2024ellav], **RALL-E**[^xin2024ralle], **VALL-E R**[^han2024valler]).
+
+和 **VALL-E** 及其变体的统一语言建模方法不同, **CosyVoice**[^du2024cosyvoice] 利用 LLM 进行文本到 Token 的转换, 并通过条件流匹配模型实现 Token 到频谱的语音合成, 通过端到端监督语音 Token 学习增强零样本语音克隆能力.
 
 </td></tr>
 <tr><td>
@@ -187,6 +207,17 @@ Alternatively, **KALL-E**[^zhu2024autoregressive] adopts an autoregressive appro
 
 </td><td>
 
+**基于连续值 Token 的 TTS**
+
+近期在基于连续表示的 TTS 系统中的进展消除了麻烦的编解码器训练, 同时实现了具有前景的性能.
+
+**MELLE**[^meng2024autoregressive] 提出了利用丰富的连续声学表示的单步 (Single-Pass) 语言模型架构, 实现高质量语音合成对包括音高, 节奏, 和音色的韵律特征的精细控制.
+
+**SALAD**[^turetzky2024continuous] 是基于连续表示采用逐 Token 的潜在扩散模型的零样本文本转语音系统, 通过语音 Token 进行上下文引导和停止控制实现可变长度音频生成.
+虽然这一方法达到了卓越的可理解性分数, 它可能面临和时间成本相关的挑战.
+
+**KALL-E**[^zhu2024autoregressive] 采用和 WaveVAE 结合的自回归方法来直接建模语音分布, 绕过 VAE 和扩散范式, 通过概率波形预测实现增强的自然度和说话人相似性.
+
 </td></tr>
 <tr><td>
 
@@ -195,28 +226,50 @@ The core idea of flow matching is to define a flow $\phi_t(x)$ that evolves over
 This flow $\phi_t(x)$ is governed by a vector field $v_t(x)$ and satisfies the following ordinary differential equation (ODE):
 
 $$
-\begin{aligned}
 \frac{d}{dt} \phi_t(x) = v_t(\phi_t(x)), \quad \phi_0(x) = x.
-\end{aligned}
 $$
 
 Here, $\phi_0(x) = x$ indicates that at time $t = 0$, the flow $\phi_t(x)$ is an identity mapping.
 
 While flow matching provides a principled framework for learning such transformations, it can be computationally expensive due to the difficulty of directly accessing the true vector field $u_t(x)$ and the target distribution $q(x)$.
-To address this, Conditional Flow Matching (CFM) is introduced.
-In CFM, the flow and the vector field are conditioned on the data $x_1$, making the optimization process more efficient.
-The objective of CFM is to minimize the discrepancy between the conditional true vector field $u_t$ and the learned conditional vector field $v_t(x; \theta)$.
+To address this, **Conditional Flow Matching (CFM)** is introduced.
+In **CFM**, the flow and the vector field are conditioned on the data $x_1$, making the optimization process more efficient.
+The objective of **CFM** is to minimize the discrepancy between the conditional true vector field $u_t$ and the learned conditional vector field $v_t(x; \theta)$.
 This discrepancy is measured by the following loss function:
 
 $$
-\begin{aligned}
 L_{\text{CFM}} = \mathbb{E}_{t, x_1, x} \left\| u_t - v_t(x; \theta) \right\|^2,
-\end{aligned}
 $$
 
 where time $t$ is uniformly sampled from $\mathcal{U}[0,1]$, data points $x_1$ are drawn from the target distribution $q(x_1)$, samples $x$ are generated through the conditional probability path $p_t(x|x_1)$, and the conditional vector field $u_t \equiv u_t(x|x_1)$.
 
 </td><td>
+
+**流匹配**[^lipman2022flow] 是用于学习将先验分布 $p_0$ 映射到目标分布 $q(x)$ 的技术.
+流匹配的核心思想是定义一个随时间演化的流 $\phi_t(x)$, 将先验分布 $p_0$ 转换为目标分布 $q(x)$.
+
+这个流 $\phi_t(x)$ 由向量场 $v_t(x)$ 控制, 它满足如下常微分方程 (ODE):
+
+$$
+\frac{d}{dt} \phi_t(x) = v_t(\phi_t(x)), \quad \phi_0(x) = x.
+$$
+
+- $\phi_0(x)=x$ 表示在时间 $t=0$ 时, 流 $\phi_t(x)$ 是恒等映射.
+
+虽然流匹配提供了学习这种变换的理论框架, 但由于直接访问真实向量场 $u_t(x)$ 和目标分布 $q(x)$ 困难, 因此计算代价高.
+
+为了处理这一问题, 引入**条件流匹配 (Conditional Flow Matching, CFM)**.
+在 **CFM** 中, 流和向量场以数据 $x_1$ 为条件, 使优化过程更加高效.
+**CFM** 的目标是最小化条件真实向量场 $u_t$ 和学习到的条件向量场 $v_t(x; \theta)$ 之间的差异.
+这一差异通过如下损失函数衡量:
+
+$$
+L_{\text{CFM}} = \mathbb{E}_{t, x_1, x} \left\| u_t - v_t(x; \theta) \right\|^2,
+$$
+
+- 时间 $t$ 均匀地从 $\mathcal{U}[0,1]$ 中采样.
+- 数据点 $x_1$ 从目标分布 $q(x_1)$ 中采样.
+- 样本 $x$ 通过条件概率路径 $p_t(x|x_1)$ 和条件向量场 $u_t \equiv u_t(x|x_1)$ 生成.
 
 </td></tr></table>
 
