--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -624,11 +624,17 @@ The iterative generation continues until the stop criterion is satisfied, after 
 <table><tr><td width="50%">
 
 In this paper, we propose a novel autoregressive speech synthesis framework based on continuous representations, which overcomes the limitations of temporal consistency and model capacity in existing systems.
-By leveraging the sequential nature of language models and the temporal dynamics of speech signals,***FELLE*** utilizes pervious tokens to assist in the flow-matching generation process.
+By leveraging the sequential nature of language models and the temporal dynamics of speech signals, ***FELLE*** utilizes pervious tokens to assist in the flow-matching generation process.
 A coarse-to-fine flow-matching architecture is then developed, capturing both temporal and spectral correlations present in mel-spectrograms, allowing for precise modeling of each continuous token.
 Experimental results show that our model consistently outperforms several baseline systems across various evaluation metrics, producing clear and natural speech with significantly improved similarity.
 
 </td><td>
+
+本文提出了基于连续表示的新式自回归语音合成框架, 克服了现有系统中时序一致性和模型容量的局限性.
+通过使用语言模型的序列性质和语音信号的时序动态, ***FELLE*** 使用先前 Token 来协助流匹配生成过程.
+从粗到细的流匹配架构被开发, 捕获梅尔频谱中的时序和频谱相关性, 允许对每个连续 Token 的精确建模.
+
+实验结果展示我们的模型在各种评估指标上一致地优于多个基线系统, 产生清晰和自然的语言, 显著提高相似度.
 
 </td></tr></table>
 
